--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,23 @@
 
   <base href="./"/>
 
-  <meta name="color-scheme" content="light dark"/>
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <meta name="format-detection" content="telephone=no"/>
-  <meta name="msapplication-tap-highlight" content="no"/>
+  <meta content="light dark" name="color-scheme"/>
+  <meta content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+  <meta content="telephone=no" name="format-detection"/>
+  <meta content="no" name="msapplication-tap-highlight"/>
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
+  <link href="assets/icon/favicon.png" rel="icon" type="image/png"/>
 
   <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta content="yes" name="apple-mobile-web-app-capable"/>
+  <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
+  <link href="manifest.webmanifest" rel="manifest">
+  <meta content="#1976d2" name="theme-color">
 </head>
 
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<app-root></app-root>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
